--- a/packages/client/Cargo.toml
+++ b/packages/client/Cargo.toml
@@ -11,119 +11,118 @@ authors = ["Fluent AI Team"]
 
 [dependencies]
 # Async streaming foundation
-ystream = { path = "../../../async-stream" }
+ystream = { git = "https://github.com/cyrup-ai/ystream.git", branch = "main" }
 
 # HTTP foundation
-http = "1.3.1"
-url = "2.5.3"
-urlencoding = "2.1.3"
+http = "1"
+url = "2"
+urlencoding = "2"
 
 # HTTP/2 support
 h2 = "0.4.12"
 
 # HTTP/3 / QUIC support
-quiche = "0.24.5"
+quiche = "0.24"
 
 # TLS support
-rustls = { version = "0.23.31", features = ["ring"] }
-rustls-pemfile = "2.2.0"
-webpki-roots = "0.26.6"
-
+rustls = { version = "0.23", features = ["ring"] }
+rustls-pemfile = "2"
+webpki-roots = "1"
 # DNS resolution
-hickory-resolver = "0.24.1"
+hickory-resolver = "0.25"
 
 # Core utilities
-tokio = { version = "1.47.1", features = ["full"] }
-bytes = "1.8.0"
-futures = "0.3.31"
-futures-util = { version = "0.3.31", default-features = false, features = ["std", "alloc"] }
-hyper = { version = "1.6.0", features = ["http1", "client"] }
+tokio = { version = "1", features = ["full"] }
+bytes = "1"
+futures = "0.3"
+futures-util = { version = "0.3", default-features = false, features = ["std", "alloc"] }
+hyper = { version = "1", features = ["http1", "client"] }
 hyper-util = { version = "0.1", features = ["http1", "http2", "client", "client-legacy"] }
-pin-project-lite = "0.2.16"
-once_cell = "1.21.3"
+pin-project-lite = "0.2"
+once_cell = "1"
 
 # Error handling
-anyhow = "1.0.93"
-thiserror = "2.0.16"
+anyhow = "1"
+thiserror = "2"
 
 # Collections
-hashbrown = "0.15.1"
+hashbrown = "0.16"
 
 # Serialization
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.143"
-serde_urlencoded = "0.7.1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+serde_urlencoded = "0.7"
 
 # Documentation testing
 doc-comment = "0.3"
 
 # Core utilities
-base64 = "0.22.1"
-chrono = { version = "0.4.41", features = ["serde"] }
+base64 = "0.22"
+chrono = { version = "0.4", features = ["serde"] }
 
 # Atomic operations
-crossbeam-channel = "0.5.13"
-crossbeam-skiplist = "0.1.3"
-crossbeam-utils = "0.8.21"
+crossbeam-channel = "0.5"
+crossbeam-skiplist = "0.1"
+crossbeam-utils = "0.8"
 
 # TLS implementations
-tokio-rustls = "0.26.2"
-rustls-native-certs = "0.8.1"
+tokio-rustls = "0.26"
+rustls-native-certs = "0.8"
 
 # Native TLS support removed - using rustls universally
 
 # Certificate generation and parsing
-rcgen = { version = "0.14.3", features = ["pem", "x509-parser"] }
-der = "0.7.9"
-const-oid = { version = "0.9.6", features = ["db"] }
-x509-certificate = "0.25.0"
-x509-cert = "0.2.5"
-x509-parser = "0.18.0"
-x509-ocsp = "0.2.1"
-spki = "0.7.3"
-pem = "3.0.5"
+rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
+der = "0.8"
+const-oid = { version = "0.10", features = ["db"] }
+x509-certificate = "0.25"
+x509-cert = "0.2"
+x509-parser = "0.18"
+x509-ocsp = "0.2"
+spki = "0.7"
+pem = "3"
 
 # Cryptography
-ring = "0.17.14"
+ring = "0.17"
 
 # HTTP body handling
-http-body = "1.0.1"
-http-body-util = "0.1.3"
+http-body = "1"
+http-body-util = "0.1"
 
 # Collections and data structures
-dashmap = "6.1.0"
-arrayvec = "0.7.6"
+dashmap = "6"
+arrayvec = "0.7"
 
 # Cookie handling
-cookie = "0.18.1"
-cookie_store = "0.22.0"
+cookie = "0.18"
+cookie_store = "0.22"
 
 # Text processing
-regex = "1.11.2"
+regex = "1"
 
 # System utilities
-hostname = "0.4.1"
-socket2 = "0.6.0"
+hostname = "0.4"
+socket2 = "0.6"
 
 # Random number generation
-fastrand = "2.3.0"
+fastrand = "2"
 
 # Utilities
-hex = "0.4.3"
-rand = "0.9.2"
-lazy_static = "1.5.0"
-zeroize = "1.8.1"
-keyring = "3.6.3"
+hex = "0.4"
+rand = "0.9"
+lazy_static = "1"
+zeroize = "1"
+keyring = "3"
 
 # Sugars and utilities
 cyrup_sugars = { git = "https://github.com/cyrup-ai/cyrup-sugars", branch = "main", package = "cyrup_sugars", features = ["all"] }
 
 # Telemetry and stats
-atomic = "0.6.0"
+atomic = "0.6"
 
 # Logging
-log = "0.4.22"
-tracing = "0.1.41"
+log = "0.4"
+tracing = "0.1"
 
 [features]
 default = ["h2", "h3", "__rustls"]
